--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,61 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.24)
 
-# FreeModbus Library CMake configuration
-# This builds only the core FreeModbus library without platform-specific code
-
-# Define the FreeModbus library target
 add_library(freemodbus STATIC)
 
-# Define include directories for FreeModbus
-set(FREEMODBUS_INCLUDE_DIRS
-    ${CMAKE_CURRENT_SOURCE_DIR}/modbus/include
-    ${CMAKE_CURRENT_SOURCE_DIR}/modbus/rtu
-    ${CMAKE_CURRENT_SOURCE_DIR}/modbus/ascii
-    ${CMAKE_CURRENT_SOURCE_DIR}/modbus/tcp
-    ${CMAKE_CURRENT_SOURCE_DIR}/demo/STM32_CMAKE/port
-    ${CMAKE_CURRENT_SOURCE_DIR}/../Drivers/CMSIS/Include
+if(NOT TARGET freemodbus_port)
+    message(FATAL_ERROR " freemodbus_port target not specified.  Please specify a cmake target that defines the include port.h:\n"
+        "add_library(freemodbus_port\n"
+        "    STATIC\n"
+        "    ${CMAKE_SOURCE_DIR}/libs/port/portevent.c\n"
+        "    ${CMAKE_SOURCE_DIR}/libs/port/portother.c\n"
+        "    ${CMAKE_SOURCE_DIR}/libs/port/porttcp.c\n"
+        ")\n"
+        "\n"
+        "target_include_directories(freemodbus_port SYSTEM\n"
+        "    PUBLIC\n"
+        "    ${CMAKE_SOURCE_DIR}/libs/port\n"
+        ")\n"
+        "\n"
+        "target_link_libraries(freemodbus_port PUBLIC lwip)\n"
+        "\n"
+        "set(FREEMB_MB_ASCII_ENABLED ON)\n"
+        "set(FREEMB_MB_RTU_ENABLED ON)\n"
+        "set(FREEMB_MB_TCP_ENABLED ON)\n"
+    )
+endif()
+
+target_link_libraries(freemodbus
+    PUBLIC
+    freemodbus_port
 )
 
-# Use FREEMODBUS_INCLUDE_DIRS in target_include_directories
+if(FREEMB_MB_ASCII_ENABLED)
+    target_compile_definitions(freemodbus PUBLIC -DMB_ASCII_ENABLED=1)
+    set(MBASCII_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/modbus/ascii/mbascii.c)
+    set(MBASCII_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/modbus/ascii)
+endif()
+if(FREEMB_MB_RTU_ENABLED)
+    target_compile_definitions(freemodbus PUBLIC -DMB_RTU_ENABLED=1)
+    set(MBRTU_SOURCE
+        ${CMAKE_CURRENT_SOURCE_DIR}/modbus/rtu/mbcrc.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/modbus/rtu/mbrtu.c
+    )
+    set(MBRTU_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/modbus/rtu)
+endif()
+if(FREEMB_MB_TCP_ENABLED)
+    target_compile_definitions(freemodbus PUBLIC -DMB_TCP_ENABLED=1)
+    set(MBTCP_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/modbus/tcp/mbtcp.c)
+    set(MBTCP_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/modbus/tcp)
+endif()
+
 target_include_directories(freemodbus PUBLIC
-    ${FREEMODBUS_INCLUDE_DIRS}
+    ${CMAKE_CURRENT_SOURCE_DIR}/modbus/include
+    ${MBASCII_HEADER}
+    ${MBRTU_HEADER}
+    ${MBTCP_HEADER}
 )
 
-# Core FreeModbus library source files
-set(FREEMODBUS_CORE_SOURCES
+target_sources(freemodbus PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/modbus/mb.c
     # Functions
     ${CMAKE_CURRENT_SOURCE_DIR}/modbus/functions/mbfunccoils.c
@@ -32,31 +65,7 @@ set(FREEMODBUS_CORE_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/modbus/functions/mbfuncinput.c
     ${CMAKE_CURRENT_SOURCE_DIR}/modbus/functions/mbfuncother.c
     ${CMAKE_CURRENT_SOURCE_DIR}/modbus/functions/mbutils.c
-    # RTU mode
-    ${CMAKE_CURRENT_SOURCE_DIR}/modbus/rtu/mbcrc.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/modbus/rtu/mbrtu.c
-    # ASCII mode (include for completeness)
-    ${CMAKE_CURRENT_SOURCE_DIR}/modbus/ascii/mbascii.c
+    ${MBASCII_SOURCE}
+    ${MBRTU_SOURCE}
+    ${MBTCP_SOURCE}
 )
-
-# Add all sources to the library target
-target_sources(freemodbus PRIVATE
-    ${FREEMODBUS_CORE_SOURCES}
-)
-
-# Define platform-dependent sources for the application
-set(FREEMODBUS_APP_SOURCES
-    ${CMAKE_CURRENT_SOURCE_DIR}/demo/STM32_CMAKE/port/portserial.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/demo/STM32_CMAKE/port/porttimer.c
-    ${CMAKE_CURRENT_SOURCE_DIR}/demo/STM32_CMAKE/port/portevent.c
-    PARENT_SCOPE
-)
-
-# Enable position-independent code (if needed)
-set_property(TARGET freemodbus PROPERTY POSITION_INDEPENDENT_CODE ON)
-
-# Set compiler options
-target_compile_options(freemodbus PRIVATE
-    -DSTM32_CMAKE
-)
-
